base/email/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: emailservice
  namespace: emailservice
spec:
  selector:
    matchLabels:
      app: emailservice
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/checkoutservice/sa/checkoutservice"]
